// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Checkbox /> should render properly 1`] = `
.emotion-6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  padding-bottom: 16px;
  padding-left: 0;
}

.emotion-3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: relative;
}

.emotion-0 {
  margin: 0;
  padding: 0;
  width: 20px;
  height: 20px;
  -webkit-appearance: none;
  background-color: transparent;
  border: 2px solid #808080;
  border-radius: 2px;
  cursor: pointer;
}

.emotion-2 {
  position: absolute;
  top: 0;
  left: 0;
  bottom: 0;
  width: 20px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  cursor: pointer;
}

.emotion-1 path {
  -webkit-transition: all .3s ease;
  transition: all .3s ease;
  opacity: 0;
}

.emotion-5 {
  padding-left: 12px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.emotion-4 {
  color: #ffffff;
  font-size: 15px;
  line-height: 19px;
  font-weight: 700;
}

<label
  className="emotion-6"
>
  <div
    className="emotion-3"
  >
    <input
      className="emotion-0"
      defaultChecked={false}
      onClick={[Function]}
      type="checkbox"
      value="checkbox"
    />
    <div
      className="emotion-2"
    >
      <svg
        className="emotion-1"
        data-file-name="checkmark.svg"
        width={20}
      />
    </div>
  </div>
  <div
    className="emotion-5"
  >
    <span
      className="emotion-4"
    >
      Checkbox
    </span>
  </div>
</label>
`;

exports[`<Checkbox /> should render properly 2`] = `
.emotion-6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  padding-bottom: 16px;
  padding-left: 0;
}

.emotion-3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: relative;
}

.emotion-2 {
  position: absolute;
  top: 0;
  left: 0;
  bottom: 0;
  width: 20px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  cursor: pointer;
}

.emotion-5 {
  padding-left: 12px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.emotion-4 {
  color: #ffffff;
  font-size: 15px;
  line-height: 19px;
  font-weight: 700;
}

.emotion-0 {
  margin: 0;
  padding: 0;
  width: 20px;
  height: 20px;
  -webkit-appearance: none;
  background-color: #73b61c;
  border: 2px solid #73b61c;
  border-radius: 2px;
  cursor: pointer;
}

.emotion-1 path {
  -webkit-transition: all .3s ease;
  transition: all .3s ease;
  opacity: 100;
}

<label
  className="emotion-6"
>
  <div
    className="emotion-3"
  >
    <input
      className="emotion-0"
      defaultChecked={true}
      onClick={[Function]}
      type="checkbox"
      value="checkbox"
    />
    <div
      className="emotion-2"
    >
      <svg
        className="emotion-1"
        data-file-name="checkmark.svg"
        width={20}
      />
    </div>
  </div>
  <div
    className="emotion-5"
  >
    <span
      className="emotion-4"
    >
      Checkbox
    </span>
  </div>
</label>
`;

exports[`<Checkbox /> should render properly checked and disabled 1`] = `
.emotion-3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: relative;
}

.emotion-5 {
  padding-left: 12px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.emotion-4 {
  color: #ffffff;
  font-size: 15px;
  line-height: 19px;
  font-weight: 700;
}

.emotion-6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: not-allowed;
  padding-bottom: 16px;
  padding-left: 0;
}

.emotion-2 {
  position: absolute;
  top: 0;
  left: 0;
  bottom: 0;
  width: 20px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  cursor: not-allowed;
}

.emotion-0 {
  margin: 0;
  padding: 0;
  width: 20px;
  height: 20px;
  -webkit-appearance: none;
  background-color: transparent;
  border: none;
  border-radius: 2px;
  cursor: not-allowed;
}

.emotion-1 path {
  -webkit-transition: all .3s ease;
  transition: all .3s ease;
  opacity: 100;
  fill: #73b61c;
}

<label
  className="emotion-6"
>
  <div
    className="emotion-3"
  >
    <input
      className="emotion-0"
      defaultChecked={true}
      onClick={[Function]}
      type="checkbox"
      value="checkbox"
    />
    <div
      className="emotion-2"
    >
      <svg
        className="emotion-1"
        data-file-name="checkmark.svg"
        width={20}
      />
    </div>
  </div>
  <div
    className="emotion-5"
  >
    <span
      className="emotion-4"
    >
      Checkbox
    </span>
  </div>
</label>
`;

exports[`<Checkbox /> should render properly disabled 1`] = `
.emotion-3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: relative;
}

.emotion-5 {
  padding-left: 12px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.emotion-4 {
  color: #ffffff;
  font-size: 15px;
  line-height: 19px;
  font-weight: 700;
}

.emotion-6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: not-allowed;
  padding-bottom: 16px;
  padding-left: 0;
}

.emotion-0 {
  margin: 0;
  padding: 0;
  width: 20px;
  height: 20px;
  -webkit-appearance: none;
  background-color: transparent;
  border: 2px solid #2e2e2e;
  border-radius: 2px;
  cursor: not-allowed;
}

.emotion-2 {
  position: absolute;
  top: 0;
  left: 0;
  bottom: 0;
  width: 20px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  cursor: not-allowed;
}

.emotion-1 path {
  -webkit-transition: all .3s ease;
  transition: all .3s ease;
  opacity: 0;
  fill: #73b61c;
}

<label
  className="emotion-6"
>
  <div
    className="emotion-3"
  >
    <input
      className="emotion-0"
      defaultChecked={false}
      onClick={[Function]}
      type="checkbox"
      value="checkbox"
    />
    <div
      className="emotion-2"
    >
      <svg
        className="emotion-1"
        data-file-name="checkmark.svg"
        width={20}
      />
    </div>
  </div>
  <div
    className="emotion-5"
  >
    <span
      className="emotion-4"
    >
      Checkbox
    </span>
  </div>
</label>
`;
